11_dev/b-istio-ingress/x-argocd.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-ui
  namespace: istio-system
spec:
  hosts:
    - "cd.arrivedelivery.com"
  gateways:
    - istio-dev-gateway
  http:
    - route:
        - destination:
            host: argo-cd-argocd-server.argocd.svc.cluster.local
            port:
              number: 80
      match:
        - uri:
            prefix: /
